optimized sorting of topic keywords on res-by-topics page
Previous version placed acronyms out of order because caps were sorted
before lower case.

--- a/output/Ind.html
+++ b/output/Ind.html
@@ -1,7 +1,7 @@
 <h2>Frequently Used Sources</h2>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.ibisworld.com/'>IBIS World</a></b></p>
 <p>Provides Industry market research reports on over 700 U.S. industries, as well as economic and demographic reports with focus on the U.S. economy, also available through SmithApps.</p>
-<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.netadvantage.standardpoor.com/'>Standard &amp; Poor's Net Advantage</a></b></p>
+<p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.netadvantage.standardandpoors.com/'>Standard &amp; Poor's Net Advantage</a></b></p>
 <p>Provides reports, forecasts, analysis, statistics and ratios of major industries. Coverage is for current and up to 4 years, depending on the Industry.</p>
 <p><b><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mergentonline.com/Hoovers'>Hoover's Online</a></b></p>
 <p>Provides comprehensive Company and Industry profiles, in-depth financials, Company overviews and histories, information on competitors, Products, services and operations. "Build a List" option allows screening for companies based on several variables.</p>
