--- a/output/res-by-title.html
+++ b/output/res-by-title.html
@@ -52,7 +52,7 @@
 <li><a href='http://www.census.gov/econ/cbp/index.html'>County Business Patterns (CPB)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://library2.cqpress.com/cqresearcher'>CQ Researcher</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.credoreference.com'>CREDO</a></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>CRSP: Center for Research in Security Prices</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps &mdash; CRSPSift. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>CRSP: Center for Research in Security Prices</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps &mdash; CRSPSift. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
 <li><a href='http://www.culturecrossing.net/basics_business_student.php?id=149'>Culture Crossing</a></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
@@ -62,7 +62,7 @@
 <li><a href='http://www.usa.gov/Topics/Reference_Shelf/Data.shtml'>Data and Statistics: USA.gov</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://data-planet.conquestsystems.com/statistical/ip'>Data-Planet Statistical Datasets</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://readyreference.data-planet.com'>Data-Planet Statistical Ready Reference</a></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to: helpme@rhsmith.umd.edu.</em>]</div></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Datastream Advance</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to: <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
 <li><a href='http://www.rhsmith.umd.edu//node/345'>Dingman Center for Entrepreneurship</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=https://www.uniworldbp.com/search.php'>Directory of American Firms Operating in Foreign Countries/Foreign Firms Operating in U.S</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.proquest.com/pqdtft?accountid=14696'>Dissertations &amp; Theses: Full Text</a></li>
@@ -116,7 +116,7 @@
 <li><a href='http://www.asaecenter.org/Community/Directories/AssociationSearch.cfm'>Gateway to Associations - American Society of Association Executives (ASAE)</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://databank.worldbank.org/ddp/home.do?Step=12&id=4&CNO=2'>Global Development Finance</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://externalization.worldbank.org/external/default/main?contentMDK=21119307&menuPK=2880787&pagePK=64691887&piPK=64691875&theSitePK=2880771'>Global Economic Monitor (GEM)</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://myinsight.globalinsight.com/servlet/cats?pageContent=home&imask=1'>Global Insight (IHS) DataInsight Web</a> <div style='font-size: 90%'>[<em>Note: If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://myinsight.globalinsight.com/servlet/cats?pageContent=home&imask=1'>Global Insight (IHS) DataInsight Web</a> <div style='font-size: 90%'>[<em>Note: If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://infotrac.galegroup.com/itweb/umd_um?db=GIC'>Global Issues in Context</a></li>
 <li><a href='http://globaledge.msu.edu/'>GlobalEdge</a></li>
 <li><a href='http://www.sociology.emory.edu/globalization/'>Globalization Website</a></li>
@@ -139,7 +139,7 @@
 <ul>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.ibisworld.com/'>IBIS World</a></li>
 <li><a href='http://www.idealist.org/'>Idealist</a></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>IHS Global Insight DataInsight Web</a> <div style='font-size: 90%'>[<em>Note: If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>IHS Global Insight DataInsight Web</a> <div style='font-size: 90%'>[<em>Note: If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
 <li><a href='http://www.independentsector.org/'>Independent Sector</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://go.worldbank.org/7S1VU9WNZ0'>Information and Communication Technologies (ICT) At-A-Glance Tables</a></li>
 <li><a href='http://smithapps.rhsmith.umd.edu/'>Institute for the Study of Security Markets (ISSM)</a> <div style='font-size: 90%'>[<em>Note: Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
@@ -176,13 +176,13 @@
 <li><a href='http://www.buyusainfo.net/'>Market Research Library</a></li>
 <li><a href='http://www.freedomhouse.org/report/nations-transit/nations-transit-2012'>Media Freedom: Freedom House - Nations in Transit - Country Reports</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.mriplus.com/'>Mediamark (MRI+)</a></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Mergent Online</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Mergent WebReports</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu</em>]</div></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Mergent Online</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Mergent WebReports</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a></em>]</div></li>
 <li><a href='http://www.research.fsu.edu/techtransfer/documents/mnei.pdf'>Metropolitan New Economy Index</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://academic.mintel.com/sinatra/oxygen_academic/academic_logon/'>Mintel</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://academic.mintel.com/'>Mintel</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://library.morningstar.com/'>Morningstar</a> <div style='font-size: 90%'>[<em>Note: Licensing restrictions limit use to 4 simultaneous users. If you are unable to access this database, please try again later. Screening for stocks and mutual funds available using many different data points.</em>]</div></li>
-<li>Morningstar Direct <div style='font-size: 90%'>[<em>Note: Access available in Van Munching Hall Finance Labs and via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
-<li>Morningstar EnCorr <div style='font-size: 90%'>[<em>Note: Access available in Van Munching Hall Financial Labs and via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu.</em>]</div></li>
+<li>Morningstar Direct <div style='font-size: 90%'>[<em>Note: Access available in Van Munching Hall Finance Labs and via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
+<li>Morningstar EnCorr <div style='font-size: 90%'>[<em>Note: Access available in Van Munching Hall Financial Labs and via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a>.</em>]</div></li>
 </ul>
 <div style='font-size: 80%'><p>[<a href='#'>back to top</a>]</p></div>
 <h3 id='N'>N</h3>
@@ -250,9 +250,9 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://webofknowledge.com/WOS'>Social Science Citation Index &ndash; Web of Science</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.oecd-ilibrary.org'>Source OECD</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.springerlink.com/'>Springer eBooks (2005-2011)</a></li>
-<li>S&amp;P Capital IQ <div style='font-size: 90%'>[<em>Note: Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore, and Shady Grove campuses. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu</em>]</div></li>
+<li>S&amp;P Capital IQ <div style='font-size: 90%'>[<em>Note: Access available on PCs in Van Munching Hall, Room 1318, and Smith School DC, Baltimore, and Shady Grove campuses. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a></em>]</div></li>
 <li>S&amp;P ExecuComp <div style='font-size: 90%'>[<em>Note: Access available in Van Munching Hall Financial Labs and via SmithApps.</em>]</div></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.netadvantage.standardpoor.com/'>Standard &amp; Poor's Net Advantage</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.netadvantage.standardandpoors.com/'>Standard &amp; Poor's Net Advantage</a></li>
 <li><a href='http://www.standardandpoors.com/home/en/us'>Standard &amp; Poor's</a></li>
 <li><a href='http://www.osha.gov/pls/imis/sicsearch.html'>Standard Industrial Classification System (SIC)</a></li>
 <li><a href='http://www.census.gov/sdc/'>State Data Centers</a></li>
@@ -270,7 +270,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://infotrac.galegroup.com/itweb/umd_um?db=TERC'>Testing and Education Reference Center</a></li>
 <li><a href='http://www.thomasnet.com/'>ThomasNet</a></li>
 <li>Thomson Reuters Eikon <div style='font-size: 90%'>[<em>Note: Access available only in Van Munching Hall Financial Markets Labs (Rooms 1318 and 3505). Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
-<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Thomson Reuters SDC Platinum</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to helpme@rhsmith.umd.edu</em>]</div></li>
+<li><a href='http://smithapps.rhsmith.umd.edu/Citrix/MyApps/auth/login.aspx'>Thomson Reuters SDC Platinum</a> <div style='font-size: 90%'>[<em>Note: Access via SmithApps. If not affiliated with or taking courses at the Smith School, e-mail a request for access to <a href="mailto:helpme@rhsmith.umd.edu">helpme@rhsmith.umd.edu</a></em>]</div></li>
 <li>Thomson Reuters LPC DealScan <div style='font-size: 90%'>[<em>Note: Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
 <li>Thomson Reuters Institutional Holdings (13F) <div style='font-size: 90%'>[<em>Note: Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
 <li>Thomson Reuters Insider Filing Data Feed <div style='font-size: 90%'>[<em>Note: Access via WRDS. Access ONLY for Ph.D. students, faculty and faculty-sponsored class research. Access is available by account only &mdash; request account at <a href='https://wrds.wharton.upenn.edu'>https://wrds.wharton.upenn.edu</a></em>]</div></li>
@@ -306,7 +306,7 @@
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://search.proquest.com/hnpwallstreetjournal/advanced?accountid=14696'>Wall Street Journal Historical (1889-1991)</a></li>
 <li><a href='http://online.wsj.com/public/page/news-small-business-franchising.html'>Wall Street Journal Interactive Edition: Franchising</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://webofknowledge.com/WOS'>Web of Science</a></li>
-<li><a href='http://proxy-um.researchport.umd.edu/login?url=http://www.westlaw.com/signon/default.wl?rs=IMP1.0&vr=2.0&sp=003372414%2D2000'>WestlawNext Campus Search</a></li>
+<li><a href='http://proxy-um.researchport.umd.edu/login?url=https://1.next.westlaw.com/Search/Home.html?sp=003372414-2100&forcecdn=false'>WestlawNext Campus Search</a></li>
 <li><a href='http://www.wholesaledistributorsnet.com/'>Wholesale Distributors Net</a></li>
 <li><a href='http://worldbusinessculture.com/'>World Business Culture</a></li>
 <li><a href='http://proxy-um.researchport.umd.edu/login?url=http://databank.worldbank.org/ddp/home.do?Step=12&id=4&CNO=2'>World Development Indicators</a></li>
